Hapus Folder Angkot

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>Latihan Javascript</title>
   </head>
   <body>
-    <script type="text/javascript" src="angkot/angkot.js"></script>
+    <script type="text/javascript" src="angkot.js"></script>
   </body>
 </html>
