--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Latihan Javascript</title>
   </head>
   <body>
-    <script type="text/javascript" src="angkot.js"></script>
+    <!-- <script type="text/javascript" src="angkot.js"></script> -->
+    <script type="text/javascript" src="pola.js"></script>
   </body>
 </html>
