--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <!-- <script type="text/javascript" src="angkot.js"></script> -->
-    <script type="text/javascript" src="pola.js"></script>
+    <!-- <script type="text/javascript" src="pola.js"></script> -->
+    <script type="text/javascript" src="suit.js"></script>
   </body>
 </html>
