--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Latihan Javascript</title>
   </head>
   <body>
-    <!-- <script type="text/javascript" src="angkot.js"></script> -->
+    <script type="text/javascript" src="angkot.js"></script>
     <!-- <script type="text/javascript" src="pola.js"></script> -->
-    <script type="text/javascript" src="suit.js"></script>
+    <!-- <script type="text/javascript" src="suit.js"></script> -->
   </body>
 </html>
